--- a/templates/furnitureDelete.html
+++ b/templates/furnitureDelete.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang ="en">
 <head>
-	 <title>New Car</title>
+  <title>Delete Car</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,8 +9,9 @@
    <script  src="{{url_for('static', filename ='LivingStyle.js')}}"></script> 
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Pontano+Sans" rel="stylesheet"> 
 </head>
+
 <body>
-<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default">
     <div id="mine" >
       <div class="navbar-header">
         <a class="navbar-brand" href="{{url_for('goodCategories')}}">Living Well Properties</a>
@@ -26,28 +25,21 @@
       </div>
     </div>
   </nav>
-	<div class="row info well">
-		<div class="col-md-6 col-md-offset-1 padding-top">
-		 <h2>Please enter the details of the new car:<br/><br/></h2>
-		 <form action="#" method = "post">
-				<div >
-				<label for="make">Make:</label>
-				<input type ="text" class="" maxlength="100" name="make"><br/>
-				<label for="model">Model:</label>
-				<input type ="text" class="" maxlength="100" name="model"><br/>
-				<label for="year">Year:</label>
-				<input type ="text" class="" maxlength="100" name="year"><br/>
-				<label for="price">Price:</label>
-				<input type ="text" class="" maxlength="100" name="price"><br/>
-				<label for="color">Color:</label>
-				<input type ="text" class="" maxlength="100" name="color"><br/>
-				<label for="image">image:</label>
-				<input type ="text" class" maxlength="100" name="image">
-				<button type="submit" class="btn btn-default" id="submit" type="submit">
-				Create</button>
-				</div>
-			</form>
-		</div>
-	</div>
-</body>	
+
+
+
+
+
+<div id ="carInfo" class="info well">
+	<h1> Delete Furniture </h1>
+	 <p>Are you sure you want to delete this furniture?</p><br/>
+ <form action="#" method="post">
+     <button type="submit" class="btn btn-default" id="submit" type="submit">
+	 Submit</button>
+ </form>
+ 
+</div>
+
+</body>
+
 </html>
