--- a/static/livingStyle.css
+++ b/static/livingStyle.css
@@ -1,21 +1,47 @@
- @media screen and (max-width: 600px)
- { 
+ @media screen and (max-width: 700px)
+ {
+ body{
+ font-family: 'Pontano Sans', sans-serif !important;
+}
  
+ .linkColor {
+     color: whitesmoke !important;
+	 }
  
- 
-#wrapper
-{	 
- width: 100%;
- text-align: center; 
- padding: inherit;
- font-style:normal;
- border-style: hidden;	
- background-repeat: no-repeat;
+ .well{
+ font-size: x-large;
 }
 
-a{
-  color:whitesmoke !important;
+.navbar{
+	background-color:#191970;
+	color: whitesmoke !important;
 }
+
+nav{
+	color: whitesmoke !important;
+}
+ 
+ 
+ #pictures{
+ width: 100%;
+ height: auto;
+ background-image: url('cottage.jpg');
+ background-repeat: no-repeat;
+ text-align: center;
+ padding-top: 150px;
+ padding-bottom: 250px;
+ color: whitesmoke;
+ 
+}
+
+.green{
+	color: green;
+}
+
+
+
+
+
 
 .itemImage{
 	width: 100%;
@@ -26,11 +52,13 @@ a{
 {
 	width: 100%;
 	height: auto;
+	margin-left: 2%;
+	margin-right: 2%;
 }
 
 .itemPic{
 	width: 100%;
-	height: 100%;
+	height: auto;
 }
 
 h1{
@@ -41,18 +69,67 @@ h1{
 
  }
  
-@media screen and (min-width: 600px)
+@media screen and (min-width: 701px)
  { 
+ 
+  body{
+ font-family: 'Pontano Sans', sans-serif !important;
+}
+ 
+#pictures{
+width: 100%;
+height: auto;
+background-image: url('cottage.jpg');
+background-repeat: no-repeat;
+text-align:center;
+padding-top: 150px;
+padding-bottom: 30%;
+color: whitesmoke;
+}
+
+nav{
+	color: whitesmoke !important;
+}
+
+.navbar{
+	background-color:#191970;	
+}
+
+.green{
+	color: green;
+}
+
+.info
+{
+	width: 100%;
+	height: auto;
+	margin-left: 2%;
+	margin-right: 2%;
+}
+
+
+
+
+
+ .well{
+ font-size: x-large;
+}
+ 
+ .linkColor {
+     color: whitesmoke !important;
+	 }
+
+.info
+{
+	width: 100%;
+	height: auto;
+	margin-left: 2%;
+	margin-right: 2%;
+}	 
 	  
-	  #pictures{
-	  background-color: white;
-	  padding-left: 0px  !important;
-	  padding-right: 0px  !important;
-     }
-	 
-	 .extend{
-	   height: 206px; 
-		 }
+	  
+
+
  
  }
  
