--- a/templates/carDelete.html
+++ b/templates/carDelete.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
-<html lang="en">
 <head>
-  <title>Furniture description</title>
+  <title>Delete Car</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -33,18 +30,15 @@
 
 
 
-
-<div class="info well">
-<h1>Furniture description:</h1>
-<p>{{myFurniture.style}} furniture</p>
-<p> Beautifully crafted in {{myFurniture.year}}</p>
-<p>Sale price: ${{myFurniture.price}}</p>
-
-<div id ="houseImage" class="itemPic">
-<img src="/static/img/{{myFurniture.image}}.jpg" alt="{{myFurniture.style}}" class="itemImage">
+<div id ="carInfo" class="info well">
+	<h1> Delete Car </h1>
+	 <p>Are you sure you want to delete this car?</p><br/>
+ <form action="#" method="post">
+     <button type="submit" class="btn btn-default" id="submit" type="submit">
+	 Submit</button>
+ </form>
+ 
 </div>
-</div>
-
 
 </body>
 
