--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
       <div>
         <ul class="nav navbar-nav">
          <li ><a id="home" href="{{url_for('goodCategories')}}" class="elem">Home</a></li>
-          <li><a  href="{{url_for('showLogin')}}" class="elem">Login</a></li>
+		<li class="login"><a  href="{{url_for('showLogin')}}" class="elem">Login</a></li>
 		<li class="active"><a href="{{url_for('goAbout')}}" class="elem ">About</a></li>
         </ul>
       </div>
