--- a/templates/home.html
+++ b/templates/home.html
@@ -20,8 +20,9 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-		<li class="active"><a id="home" href="{{url_for('goodCategories')}}" class="elem">Home</a></li>
+		  <li class="active"><a id="home" href="{{url_for('goodCategories')}}" class="elem">Home</a></li>
           <li><a  href="{{url_for('showLogin')}}" class="elem">Login</a></li>
+		<li class="hide" ><a  href="{{url_for('gdisconnect')}}" class="elem">Logout</a></li>
           <li><a href="{{url_for('goAbout')}}" class="elem">About</a></li>
         </ul>
       </div>
