--- a/templates/aboutLoggedIn.html
+++ b/templates/aboutLoggedIn.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Car description</title>
+  <title>About Us</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -19,8 +19,8 @@
       <div>
         <ul class="nav navbar-nav">
          <li ><a id="home" href="{{url_for('goodCategories')}}" class="elem">Home</a></li>
-          <li><a  href="{{url_for('gdisconnect')}}" class="elem">Logout</a></li>
-          <li><a href="{{url_for('goAbout')}}" class="elem">About</a></li>
+		<li><a  href="{{url_for('gdisconnect')}}" class="elem">Logout</a></li>
+		<li class="active"><a href="{{url_for('goAbout')}}" class="elem ">About</a></li>
         </ul>
       </div>
     </div>
@@ -29,19 +29,17 @@
 
 
 
-<div id ="carInfo" class="info well">
-	<h1>Car description:</h1>
-<p>{{myCar.make + " " + myCar.model}}</p>
-<p>Year: {{myCar.year}}</p>
-<p> Color:  {{myCar.color}}</p>
-<p>Price:  ${{myCar.price}}</p>
 
-<div id ="carImage" class="itemPic">
-<img src="/static/img/{{myCar.image}}.jpg" alt="{{myCar.model}}" class="itemImage">
-</div><br/>
-<a href="{{url_for('updateCarDetails', carItem_make = myCar.make)}}"><input type="button" id="edit" class="btn btn-default" value="Edit" /></a>
-<a href="{{url_for('deleteCarDetails', carItem_make = myCar.make)}}"><input type="button" id="delete"  class="btn btn-default" value="Delete"/></a>
+<div class="well info">
+<blockquote>
+Use this website in order to find items for sale you might be interested in.<br/>
+Items are separated in 3 different categories: cars, houses, and furniture.
+</blockquote>	
+
 </div>
+
+
+
 </body>
 
 </html>
