--- a/templates/myFurnitureFile.html
+++ b/templates/myFurnitureFile.html
@@ -21,8 +21,8 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-         <li ><a id="home" href="{{url_for('goodCategories')}}" class="elem">Home</a></li>
-          <li><a  href="{{url_for('showLogin')}}" class="elem">Login</a></li>
+          <li ><a id="home" href="{{url_for('goodCategories')}}" class="elem">Home</a></li>
+          <li><a  href="{{url_for('gdisconnect')}}" class="elem">Logout</a></li>
           <li><a href="{{url_for('goAbout')}}" class="elem">About</a></li>
         </ul>
       </div>
